--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,7 @@
                     <li><a href="{{ url_for('tag2')}}">Interview & Dokumente</a></li>
                     <li><a href="{{ url_for('q_and_a')}}">Interview detailliert</a></li>
                     <li><a href="{{ url_for('open_qs')}}">Interview offen</a></li>
+                    <li><a href="{{ url_for('test')}}">Interview offen</a></li>
                 </ul>
             </aside>
         </div>
