--- a/templates/active_test.html
+++ b/templates/active_test.html
@@ -21,25 +21,25 @@
     <h2 class='subtitle'>
         Hier gibt es all die gesammelten Infos in einer Uebersicht. 
     </h2>
-
-    <!-- Kundenauswahl -->
-    <div class="box">
-        <div class="field">
-            <label class="label">Kunde auswählen</label>
-            <div class="control">
-                <div class="select is-primary">
-                    <select name="dropdown_option">
-                        {% for client in clients %}
-                        <option value="{{ option | lower }}">{{ client }}</option>
-                        {% endfor %}
-                    </select>
+    <div>
+        <!-- Kundenauswahl -->
+        <div class="box">
+            <div class="field">
+                <label class="label">Kunde auswählen</label>
+                <div class="control">
+                    <div class="select is-primary">
+                        <select name="dropdown_option">
+                            {% for client in clients %}
+                            <option value="{{ option | lower }}">{{ client }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
                 </div>
             </div>
+            <!-- Button to reveal the content -->
+            <button class="button is-primary" onclick="toggleInfo()">Show Info</button>
         </div>
-    </div>
 
-    <!-- Button to reveal the content -->
-    <button class="button is-primary" onclick="toggleInfo()">Show Info</button>
 
     <!-- The hidden content -->
     <div id="clientinfo" class="table-container" style="display: none;">
