--- a/templates/q&a.html
+++ b/templates/q&a.html
@@ -1,30 +1,62 @@
 {% extends 'base.html' %}
 
+{% block head %}
+    <style>
+        .control, .content {
+            display: inline-block;
+            vertical-align: top;
+            width: 48%; /* Adjust width as needed */
+            margin-right: 10px; /* Optional space between */
+        }
+    </style>
+
+{% endblock %}
 {% block title %}Interview Questions{% endblock %}
 
 {% block content %}
-
+        {% if not selected_client %}    
         <!-- Main Content -->
         <div class="column is-10">
             <!-- Form starts here -->
-            <form method="post" enctype="multipart/form-data">
-
+            <form method="POST"  action="{{ url_for('q_and_a') }}" enctype="multipart/form-data">
                 <!-- Kundenauswahl -->
-                <div class="box">
-                    <div class="field">
-                        <label class="label">Kunde auswählen</label>
-                        <div class="control">
-                            <div class="select is-primary">
-                                <select name="dropdown_option">
-                                    {% for client in clients %}
-                                    <option value="{{ option | lower }}">{{ client }}</option>
-                                    {% endfor %}
-                                </select>
+                <!--<div class="box">-->
+                <div class="columns equal-height-columns">
+                    <div class="column">
+                        <div class="box">
+                            <div class="field">
+                                <label class="label">Kunde auswählen</label>
+
+                                <div class="control">
+                                    <div class="select is-primary">
+                                        <select name="dropdown_option" style="display: inline-block; vertical-align: top">
+                                            {% for client in clients %}
+                                            <option value="{{ client }}">{{ client }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                    <input type="submit" name="select_client" class="button is-primary"></input>
+                                </div>
                             </div>
                         </div>
                     </div>
+            </form>
+                    <div class="column">
+                        <div class="box">
+                            <label class="label">Ausgewählter Kunde</label>
+                                <div class="control">
+                                    <div class="content box" style="padding: 12px; border: 1px solid #127b4a; border-radius: 4px;" value="{{ chosen_client }}">
+                                        {{ chosen_client }}
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
                 </div>
+            {% endif %}
 
+            {% if selected_client %}
+            <h2>Questions for {{ selected_client }}</h2>
+            <form method="POST">
                 <!-- Question 1 -->
                 <div class="box">
                     <div class="field">
@@ -123,6 +155,7 @@
                 </div>
             </form>
             <!-- Form ends here -->
+            {% endif %}
         </div>
     </div>
 
