--- a/templates/test.html
+++ b/templates/test.html
@@ -22,6 +22,7 @@
         Hier gibt es all die gesammelten Infos in einer Uebersicht. 
     </h2>
 
+<form method="post" action="/admin">
     <!-- Kundenauswahl -->
     <div class="box">
         <div class="field">
@@ -30,14 +31,15 @@
                 <div class="select is-primary">
                     <select name="dropdown_option">
                         {% for client in clients %}
-                        <option value="{{ option | lower }}">{{ client }}</option>
+                        <option value="{{ client }}">{{ client }}</option>
                         {% endfor %}
                     </select>
                 </div>
             </div>
         </div>
+        <input type="submit" value="Submit">
     </div>
-
+</form>
     <!-- Button to reveal the content -->
     <button class="button is-primary" onclick="toggleInfo()">Show Info</button>
 
