neues datenmodell zweigleisige implementierung

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,7 @@
                     <li><a href="{{ url_for('q_and_a')}}">Interview detailliert</a></li>
                     <li><a href="{{ url_for('open_qs')}}">Interview offen</a></li>
                     <li><a href="{{ url_for('test')}}">Interview offen</a></li>
+                    <li><a href="{{ url_for('business_analysis')}}">Business Analyse</a></li>
                 </ul>
             </aside>
         </div>
