--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,7 @@
                     <li><a href="{{ url_for('open_qs')}}">Interview offen</a></li>
                     <li><a href="{{ url_for('test')}}">Interview offen</a></li>
                     <li><a href="{{ url_for('business_analysis')}}">Business Analyse</a></li>
+                    <li><a href="{{ url_for('HackTests')}}">Business Analyse</a></li>
                 </ul>
             </aside>
         </div>
